cleaned up the code and made it fully usable

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             </div>
             <div class="button-container">
                 <button class="button">AC</button>
-                <button class="button">C</button>
-                <button class="button">+/-</button>
+                <button class="delete-button">C</button>
+                <button class="pluss-minus-button">+/-</button>
                 <button class="operator-button">/</button>
                 <button class="button">9</button>
                 <button class="button">8</button>
                 <button class="button">7</button>
-                <button class="operator-button">*</button>
+                <button class="operator-button">x</button>
                 <button class="button">6</button>
                 <button class="button">5</button>
                 <button class="button">4</button>
@@ -32,7 +32,7 @@
                 <button class="operator-button">-</button>
                 <button class="button" id="long-button">0</button>
                 <button class="button">.</button>
-                <button class="button">=</button>
+                <button class="equal-button">=</button>
             </div>
         </div>
     </div>
