--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="display">
             </div>
             <div class="button-container">
-                <button class="button">AC</button>
+                <button class="ac-button">AC</button>
                 <button class="delete-button">C</button>
                 <button class="pluss-minus-button">+/-</button>
                 <button class="operator-button">/</button>
